--- a/pom.xml
+++ b/pom.xml
@@ -98,13 +98,13 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Nahid</name>
+	      <name>admin</name>
 	      <url>http://3.111.35.82:8081/repository/practice-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Nahid</name>
+	      <name>admin</name>
 	      <url>http://3.111.35.82:8081/repository/practice-snapshot/</url>
 	    </snapshotRepository>
 	    
